Normalize quest/book interface ids for API translation